Adds and corectes translations

--- a/DakkaDataLink/Rescources/English.xaml
+++ b/DakkaDataLink/Rescources/English.xaml
@@ -80,7 +80,7 @@
     <system:String x:Key="comboboxitem_color_gray">Gray</system:String>
     <system:String x:Key="comboboxitem_color_darkgray">DarkGray</system:String>
     <system:String x:Key="textblock_font_size">Font Size:</system:String>
-    <!-- <system:String x:Key="flashOnNewCoordsString">Flash On New Coords</system:String> -->
+    <system:String x:Key="textblock_flash_on_new_cords">Flash On New Coords</system:String> 
     
     <!--Spotter settings-->
     <system:String x:Key="groupbox_settings_header">Spotter Settings</system:String>
