--- a/DakkaDataLink/Rescources/Polish.xaml
+++ b/DakkaDataLink/Rescources/Polish.xaml
@@ -24,19 +24,24 @@
     <system:String x:Key="textblock_version">Wersja:</system:String>
     <system:String x:Key="textblock_translators">Tłumacze:</system:String>
 
-    <!--Gunner and Spotter-->
+    <!--Spotter_UserControl and GunBattery_UserControl-->
     <system:String x:Key="groupbox_coordinates_header">Współrzędne Ostrzału</system:String>
-    <system:String x:Key="previous_coordinates_text">Poprzednie Koordynaty</system:String>
-    <system:String x:Key="saved_coordinates_text">Zapisane Koordynaty</system:String>
     <system:String x:Key="textblock_distance">Dystans:</system:String>
     <system:String x:Key="textblock_tooltip_distance">Odległość</system:String>
-    <system:String x:Key="textbox_tooltip_distance">Ctrl prawy + Strzałka w górę/dół, aby zmienić o 1 krok. Shift prawy + Strzałka w górę/dół, aby zmienić o 3 kroki.</system:String>
     <system:String x:Key="textblock_azimuth">Az:</system:String>
     <system:String x:Key="textblock_tooltip_azimuth">Azymut</system:String>
+
+    <!--Spotter_UserControl-->
+    <system:String x:Key="textbox_tooltip_distance">Ctrl prawy + Strzałka w górę/dół, aby zmienić o 1 krok. Shift prawy + Strzałka w górę/dół, aby zmienić o 3 kroki.</system:String>
     <system:String x:Key="textbox_tooltip_azimuth">Ctrl prawy + Strzałka w prawo/lewo, aby zmienić o 1 stopień. Shift prawy + Strzałka w prawo/lewo, aby zmienić o 10 stopni.</system:String>
     <system:String x:Key="button_text">Wyślij współrzędne</system:String>
     <system:String x:Key="button_tooltip">Ctrl prawy + NumPad Zero, aby wysłać.</system:String>
 
+    <!--<system:String x:Key="timeString">Time</system:String>                                 -->
+    <!--<system:String x:Key="nameString">Name</system:String>                                 -->
+    <system:String x:Key="previous_coordinates_text">Poprzednie Koordynaty</system:String>
+    <system:String x:Key="saved_coordinates_text">Zapisane Koordynaty</system:String>
+    
     <!--Connections-->
     <system:String x:Key="groupbox_connection_header">Ustawienia połączenia</system:String>
     <system:String x:Key="user_role_header">Jestem:</system:String>
@@ -75,6 +80,8 @@
     <system:String x:Key="comboboxitem_color_gray">Szary</system:String>
     <system:String x:Key="comboboxitem_color_darkgray">Ciemnoszary</system:String>
     <system:String x:Key="textblock_font_size">Rozmiar czcionki:</system:String>
+    <system:String x:Key="textblock_flash_on_new_cords">Błyśnij przy nowych współrzędnych</system:String>
+    
     <!--Spotter settings-->
     <system:String x:Key="groupbox_settings_header">Ustawienia zwiadowcy</system:String>
     <system:String x:Key="textblock_artillery_progile">Profil artylerii:</system:String>
