--- a/DakkaDataLink/App.xaml
+++ b/DakkaDataLink/App.xaml
@@ -7,7 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Rescources\English.xaml"/>
+                <ResourceDictionary Source="Resources\English.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
